<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>eng_description</name>
  <version>0.0.0</version>
  <description>The eng_description package</description>
  <maintainer email="davetcoleman@gmail.com">Dave Coleman</maintainer>
  <license>BSD</license>
  <url type="website">http://gazebosim.org</url>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>ros_gz</exec_depend>
  <exec_depend>gz_ros2_control</exec_depend>
  <exec_depend>controller_manager</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  <gazebo_ros gazebo_model_path="${prefix}/.."/>
  <ignition_plugin_path>${prefix}/lib/ign-gazebo-6/plugins</ignition_plugin_path>
  </export>
</package>